cabal-version:       2.2

name:                timilisp
version:             0.2.0.0
homepage:            https://github.com/githubuser/timilisp#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Timur Chumaraev, Konstantin Ustiuzhanin, Kutlahmetov Iskander
maintainer:          t.chumaraev@innopolis.university
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable timilisp
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, split >= 0.2.4
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
